--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cookandroid.catchnoteproject">
+    package="com.cookandroid.share">
 
     <application
         android:allowBackup="true"
@@ -10,23 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ResultActivity"></activity>
-        <activity android:name=".EventViewActivity" />
-        <activity android:name=".SiteViewActivity" />
-        <activity android:name=".SelectOptionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".BuyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
